<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/d_20dp"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regiter"
        android:textColor="@color/LightGreen"
        android:textSize="@dimen/d_50sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/sign_up_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="100"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingTop="@dimen/d_20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/BtnSign_up"
        android:layout_width="204dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/d_20dp"
        android:text="@string/regiter"
        android:textSize="25sp" />


</androidx.appcompat.widget.LinearLayoutCompat>