<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Aquamarine"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/avt_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/your_avt"
                android:layout_width="@dimen/d_200dp"
                android:layout_height="@dimen/d_200dp"
                android:src="@drawable/avt_default" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_8dp"
                android:text="Họ và tên"
                android:textColor="@color/Gray"
                android:textSize="@dimen/d_20sp" />

            <TextView
                android:id="@+id/your_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/d_8dp"
                android:hint="Your Name"
                android:textColor="@color/black"
                android:textSize="@dimen/d_20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_8dp"
                android:text="Email"
                android:textColor="@color/Gray"
                android:textSize="@dimen/d_20sp" />

            <TextView
                android:id="@+id/your_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Your Email"
                android:textColor="@color/black"
                android:textSize="@dimen/d_20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_change_inf"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="@dimen/d_240dp"
                android:layout_height="@dimen/d_50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/d_30dp"
                android:background="@drawable/button_corners"
                android:text="@string/change_profile"
                android:textColor="@color/black"
                android:textSize="@dimen/d_25sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center"
                android:text="Change User Info"
                android:textColor="@color/black"
                android:textSize="@dimen/d_30sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avt_change"
                android:layout_marginTop="20dp"
                android:layout_width="@dimen/d_150dp"
                android:layout_height="@dimen/d_150dp"
                android:src="@drawable/avt_default" />


            <EditText
                android:id="@+id/name_change"
                android:layout_width="300dp"
                android:layout_height="@dimen/d_40dp"
                android:layout_marginBottom="@dimen/d_15dp"
                android:hint="Name" />

            <EditText
                android:id="@+id/email_change"
                android:layout_width="300dp"
                android:layout_height="@dimen/d_40dp"
                android:layout_marginBottom="@dimen/d_15dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/pass_change"
                android:layout_width="300dp"
                android:layout_height="@dimen/d_40dp"
                android:layout_marginBottom="@dimen/d_10dp"
                android:hint="@string/pass" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_change_if"
                android:layout_width="200dp"
                android:layout_height="@dimen/d_40dp"
                android:layout_gravity="center"
                android:background="@drawable/button_corners"
                android:gravity="center"
                android:text="Change"
                android:textSize="@dimen/d_20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>